implement book
